# cmake_study

cmake-demo/Demo1/: CMakeLists.txt
cmake-demo/Demo2/: CMakeLists.txt
cmake-demo/Demo4/: CMakeLists.txt
cmake-demo/test01/: CMakeLists.txt
cmake-examples/01-basic/A-hello-cmake/: CMakeCache.txt  Makefile  cmake_install.cmake
mycmake/test03/: CMakeLists.txt
mycmake/test04/: CMakeLists.txt
mycmake/test05/: CMakeLists.txt
mycmake/test06/: main.c
mycmake/test07/: CMakeLists.txt
mycmake/test08/src/: CMakeLists.txt
mycmake/test11/: CMakeLists.txt  main.cc
